# advancing_front_mesher

./: CMakeLists.txt  README.md
.github/workflows/: clang_format.yml  ubuntu.yml
advancing_front_mesher/: CMakeLists.txt
advancing_front_mesher/include/advancing_front_mesher/: advancing_front.h
advancing_front_mesher/include/advancing_front_mesher/impl/: advancing_front.hpp
advancing_front_mesher/src/: advancing_front_reconstruction.cpp
include/advancing_front_mesher/: advancing_front.h  advancing_front_point_type.h
include/advancing_front_mesher/impl/: advancing_front.hpp
include/advancing_front_mesher/utils/: distances.h  intersections.h  normals.h
include/advancing_front_mesher/utils/impl/: intersections.hpp  normals.hpp
src/: advancing_front.cpp  advancing_front_reconstruction.cpp
test/: CMakeLists.txt  test_advancing_front.cpp  test_common.cpp  test_plane_intersection.cpp
